fix: resolve related content card overflow and page horizontal scroll

--- a/assets/scss/partials/layout/list.scss
+++ b/assets/scss/partials/layout/list.scss
@@ -52,13 +52,13 @@
 
     /// These values are computed from the shadow of the article-list--tile (which uses shadow-l1 and shadow-l2)
     /// so that the shadow is not cut off
-    margin-left: calc(var(--shadow-overlap-x) * -1);
-    margin-right: calc(var(--shadow-overlap-x) * -1);
+    margin-left: 0;
+    margin-right: 0;
     margin-bottom: calc(var(--shadow-overlap-y) * -1);
-    
+
     .article-list--tile {
         display: flex;
-        padding: var(--spacing-xs) var(--shadow-overlap-x) var(--shadow-overlap-y) var(--shadow-overlap-x);
+        padding: var(--spacing-xs) 0 var(--shadow-overlap-y) 0;
         width: max-content;
         gap: var(--spacing-lg);
 
